--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section id="about" class="max-w-3xl mx-auto py-12 px-4 fade-in">
     <h2 class="text-2xl font-bold mb-4 text-blue-600">关于我</h2>
     <p>
-      您好，我是一位性格开朗的鄔雨霖、积极向上的人，热爱网页设计与前端开发。平时喜欢打篮球，不仅锻炼身体，也提升了团队协作能力。
+      您好，我是一位性格开朗的吴雨霖、积极向上的人，热爱网页设计与前端开发。平时喜欢打篮球，不仅锻炼身体，也提升了团队协作能力。
       我注重细节、效率与责任感，乐于探索新技术，不断追求进步。
     </p>
   </section>
